Move swagger doc to module. Refactor model
