# account-service/module/tenant/model/tenant.go
@@ -1,6 +1,8 @@
 package model
 
 import (
+	"time"
+
 	"gorm.io/gorm"
 )
 
@@ -8,56 +10,41 @@ type Tenants []*Tenant
 
 type Tenant struct {
 	gorm.Model
-	Name   string
-	Code   string
-	Email  string
-	Domain string
-	Secret string
-}
-
-func (b Tenant) ToDto() *TenantDto {
-	return &TenantDto{
-		ID:     b.ID,
-		Name:   b.Name,
-		Code:   b.Code,
-		Domain: b.Domain,
-		Email:  b.Email,
-	}
+	Name      string
+	Code      string
+	Email     string
+	Domain    string
+	Secret    string
+	IsActive  bool
+	CreatedAt time.Time
+	UpdatedAt time.Time
 }
 
 type TenantDtos []*TenantDto
 
 type TenantDto struct {
-	ID     uint   `json:"id" example:"1"`
-	Name   string `json:"name" example:"Tenant 1"`
-	Domain string `json:"domain" example:"EBOOK"`
-	Code   string `json:"code" example:"Tenant1"`
-	Email  string `json:"email" example:"tenant@mail.com"`
-	Secret string `json:"secret"`
+	ID        uint      `json:"id" example:"123"`
+	Name      string    `json:"name" example:"Tenant 1"`
+	Domain    string    `json:"domain" example:"EBOOK"`
+	Code      string    `json:"code" example:"Tenant1"`
+	Email     string    `json:"email" example:"tenant@mail.com"`
+	IsActive  bool      `json:"isActive" example:true`
+	CreatedAt time.Time `json:"createdAt" example:"2021-02-02T02:52:24Z"`
+	UpdatedAt time.Time `json:"updatedAt" example:"2021-02-02T02:52:24Z"`
 }
 
 type TenantForm struct {
-	Name   string `json:"name" example:"Tenant 1" valid:"Required;MaxSize(100)"`
-	Code   string `json:"code" example:"Tenant1" valid:"Required;MaxSize(100)"`
-	Domain string `json:"domain" example:"EBOOK" valid:"Required;MaxSize(100)"`
-	Email  string `json:"email" example:"tenant@mail.com" valid:"Required;MaxSize(255)"`
-	Secret string `json:"secret"`
+	Name   string `json:"name" example:"Tenant 1" valid:"Required;MinSize(5);MaxSize(255)"`
+	Code   string `json:"code" example:"Tenant1" valid:"Required;MinSize(3);MaxSize(50)"`
+	Domain string `json:"domain" example:"EBOOK" valid:"Required;MinSize(3);MaxSize(50)"`
+	Email  string `json:"email" example:"tenant@mail.com" valid:"Required;Email;"`
 }
 
 type TenantPatchForm struct {
-	Name   string `json:"name" example:"Tenant 1" valid:"MaxSize(100)"`
-	Code   string `json:"code" example:"Tenant1" valid:"MaxSize(100)"`
-	Domain string `json:"code" example:"EBOOK" valid:"MaxSize(100)"`
-	Email  string `json:"email" example:"tenant@mail.com" valid:"MaxSize(255)"`
-}
-
-func (bs Tenants) ToDto() TenantDtos {
-	dtos := make([]*TenantDto, len(bs))
-	for i, b := range bs {
-		dtos[i] = b.ToDto()
-	}
-
-	return dtos
+	Name   string `json:"name" example:"Tenant 1" valid:"MinSize(5);MaxSize(255)"`
+	Code   string `json:"code" example:"Tenant1" valid:"MinSize(3);MaxSize(50"`
+	Domain string `json:"domain" example:"EBOOK" valid:"Required;MinSize(3);MaxSize(50)"`
+	Email  string `json:"email" example:"tenant@mail.com" valid:"Email"`
 }
 
 func (f *TenantForm) ToModel() (*Tenant, error) {
@@ -65,7 +52,7 @@ func (f *TenantForm) ToModel() (*Tenant, error) {
 		Name:   f.Name,
 		Code:   f.Code,
 		Email:  f.Email,
-		Secret: "123",
+		Domain: f.Domain,
 	}, nil
 }
 
@@ -75,4 +62,26 @@ func (f *TenantPatchForm) ToModel() (*Tenant, error) {
 		Code:  f.Code,
 		Email: f.Email,
 	}, nil
+}
+
+func (b Tenant) ToDto() *TenantDto {
+	return &TenantDto{
+		ID:        b.ID,
+		Name:      b.Name,
+		Code:      b.Code,
+		Domain:    b.Domain,
+		Email:     b.Email,
+		IsActive:  b.IsActive,
+		CreatedAt: b.CreatedAt,
+		UpdatedAt: b.UpdatedAt,
+	}
+}
+
+func (bs Tenants) ToDto() TenantDtos {
+	dtos := make([]*TenantDto, len(bs))
+	for i, b := range bs {
+		dtos[i] = b.ToDto()
+	}
+
+	return dtos
 }
